demo/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: staging
  labels:
    app: demo-app
    app.kubernetes.io/name: demo-app
    env: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
        app.kubernetes.io/name: demo-app
        env: staging
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: demo-app
        image: ghcr.io/lovius215/demo01:staging-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8091
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
