demo/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: staging
  labels:
    app: demo-app
    app.kubernetes.io/name: demo-app
    env: staging
spec:
  type: NodePort
  ports:
    - name: http
      port: 8091
      targetPort: 8091
      nodePort: 30091
  selector:
    app: demo-app
